--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
-    "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
